[package]
name = "gh-add-issue"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
dialoguer = { version = "0.12.0", features = ["fuzzy-select"] }
env_logger = "0.11.10"
log = "0.4.29"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
skim = "4.5.0"
tokio = { version = "1.51.0", features = ["full"] }

[dev-dependencies]
assert_cmd = "2.2.0"
predicates = "3.1.4"
